# ce-libm

./: .gitmodules  CMakeLists.txt
src/ce-liba/: __functions.c  __init.c  __integral.c  __parser.c  analysis.h  functions.h  integral.h  liba.h  manifest.json  parser.h
src/ce-libbitstr/: _and.c  _bitstr_operator.c  _bitstr_operator.h  _divide.c  _minus.c  _nand.c  _or.c  _plus.c  _times.c  _xor.c  bitstr.c  bitstr.h  bitstr_iterator.c  bitstr_iterator.h  bitstr_type.c  bitstr_type.h  bitstr_util.c  bitstr_util.h  libbitstr.h  manifest.json
src/ce-libm/: acos.c  acosf.c  asin.c  asinf.c  atan.c  atan2.c  atan2f.c  atanf.c  ceil.c  ceilf.c  clamp.c  clampf.c  clampl.c  cos.c  cosf.c  cosh.c  coshf.c  exp.c  expf.c  fabs.c  ffak.c  floor.c  floorf.c  fma.c  fmaf.c  fmal.c  fmod.c  fmodf.c  ftaylor.c  gcd.c  ilogb.c  ilogbf.c  j0.c  j0f.c  j1.c  j1f.c  jn.c  jnf.c  lcm.c  lgamma_r.c  (+27 more)
src/ce-libprim/: _fourier_transformation.c  _fourier_transformation.h  _moebius.c  _moebius.h  _prim_number.c  _prim_number.h  _random_interval.c  _random_interval.h  libprim.h  manifest.json  prim_numbers.h  uprim.h
